# Protobuf_Qt

./: CMakeLists.txt  conanfile.txt
src/: mes.pb.cc  mes.pb.h
src/Examples/: Ex1.cpp
src/Parsing/: DelimitedMessagesStreamParser.h
src/Testing/: tests.cpp
